# hs-doc

./: .gitignore  README.adoc  README.md  cabal.project  cabal.project.freeze  debian-requirements.txt  doc.cabal  package.yaml  resolver.yaml  stack.yaml
src/: Lib.hs
